--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@playwright/test": "^1.51.1",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.12",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.3.1",
     "k6": "^0.0.0",
     "typescript": "^5.8.2"
   }
