--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -28,6 +28,10 @@ jobs:
         
       - name: Run Cross-Browser Tests
         run: npm run test:browsers
+
+      - name: Check playwright-report directory # Added for diagnostics
+        if: always()
+        run: ls -R playwright-report/
         
       - name: Upload Test Results
         if: always()
@@ -57,6 +61,10 @@ jobs:
         
       - name: Run Responsive Tests
         run: npm run test:responsive
+
+      - name: Check playwright-report directory for responsive # Added for diagnostics
+        if: always()
+        run: ls -R playwright-report/
         
       - name: Upload Test Results
         if: always()
@@ -102,6 +110,10 @@ jobs:
         run: |
           # Run a reduced version of load tests in CI to avoid overloading GitHub Actions
           k6 run tests/load-testing/load-test.js --out json=results/load-test-results.json -e CI=true --vus 5 --duration 30s
+
+      - name: Check results directory # Added for diagnostics
+        if: always()
+        run: ls -R results/
         
       - name: Upload Load Test Results
         uses: actions/upload-artifact@v3
